--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <article class="content-main__article">
         <div class="content-main__half-column">
           <p class="content-main__paragraph">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
-          <p class="content-main__paragraph content-main__paragraph--view--tablet">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span class="content-main__paragraph--view--desktop">, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</span></p>
+          <p class="content-main__paragraph content-main__paragraph--view--tablet">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
           <button class="content-main__btn-link">Читать далее</button>
         </div>
         <div class="content-main__half-column">
