--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <div class="content-menu">
       <nav class="content-menu__inline-menu">
         <ul class="content-menu__menu-wrapper">
-          <li class="content-menu__list-item content-menu__list-item--active"><a class="content-menu__menu-wrapper--list-a" href="#">Ремонтируемые бренды</a></li>
-          <li class="content-menu__list-item"><a class="content-menu__menu-wrapper--list-a" href="#">Ремонтируемые устройства</a></li>
-          <li class="content-menu__list-item"><a class="content-menu__menu-wrapper--list-a" href="#">Цены на услуги</a></li>
-          <li class="content-menu__list-item"><a class="content-menu__menu-wrapper--list-a" href="#">Адреса сервисных центров</a></li>
-          <li class="content-menu__list-item"><a class="content-menu__menu-wrapper--list-a" href="#">Специальные цены</a></li>
+          <li class="content-menu__list-item content-menu__list-item--active"><a class="content-menu__list-a" href="#">Ремонтируемые бренды</a></li>
+          <li class="content-menu__list-item"><a class="content-menu__list-a" href="#">Ремонтируемые устройства</a></li>
+          <li class="content-menu__list-item"><a class="content-menu__list-a" href="#">Цены на услуги</a></li>
+          <li class="content-menu__list-item"><a class="content-menu__list-a" href="#">Адреса сервисных центров</a></li>
+          <li class="content-menu__list-item"><a class="content-menu__list-a" href="#">Специальные цены</a></li>
         </ul>
       </nav>
     </div>
