--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <div class="content-main">
       <article class="content-main__article">
         <div class="content-main__half-column">
-          <p class="content-main__paragraph">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
-          <p class="content-main__paragraph content-main__paragraph--view--tablet">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
+	  <div class="content-main__custom-height">
+            <p class="content-main__paragraph">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+            <p class="content-main__paragraph content-main__paragraph--view--tablet">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
+	  </div>
           <button class="content-main__btn-link">Читать далее</button>
         </div>
         <div class="content-main__half-column">
