--- a/slider.html
+++ b/slider.html
@@ -15,126 +15,126 @@
 	<div class="brand-slider">
       <h2 class="brand-slider__title">Ремонт техники различных брендов</h2>
       <div class="brand-slider__wrapper">
-        <div class="brand-slider__item">
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-1.png" alt="Brand 1">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-2.png" alt="Brand 2">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-3.png" alt="Brand 3">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-4.png" alt="Brand 4">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-5.png" alt="Brand 5">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-6.png" alt="Brand 6">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-5.png" alt="Brand 5">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-6.png" alt="Brand 6">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-7.png" alt="Brand 7">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-8.png" alt="Brand 8">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-1.png" alt="Brand 1">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-2.png" alt="Brand 2">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-3.png" alt="Brand 3">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-4.png" alt="Brand 4">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" class="brand-slider__item-picture" src="img/slider-item-5.png" alt="Brand 5">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-6.png" alt="Brand 6">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-5.png" alt="Brand 5">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-6.png" alt="Brand 6">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-7.png" alt="Brand 7">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
-        <div class="brand-slider__item brand-slider__item--hidden-item">
+          <div class="brand-slider__item-btn"></div>
+        </a>
+        <a href="#" class="brand-slider__item brand-slider__item--hidden-item">
           <div class="brand-slider__item-logo">
             <img class="brand-slider__item-picture" src="img/slider-item-8.png" alt="Brand 8">
           </div>
-          <button class="brand-slider__item-btn"></button>
-        </div>
+          <div class="brand-slider__item-btn"></div>
+        </a>
       </div>
       <div class="swiper-pagination"></div>
       <button class="brand-slider__more">Показать все</button>
